[package]
name = "t-ssh-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrussh = "0.33.5"
thrussh-keys = "0.21.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
anyhow = "1.0.58"