[package]
name = "t-ssh-client"
version = "0.1.0"
authors = ["kolapapa <kolapapa2021@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/kolapapa/t-ssh-client"
repository = "https://github.com/kolapapa/t-ssh-client"
description = "Rust async ssh client wrapped by thrussh"
keywords = ["tokio", "ssh", "thrussh"]
categories = ["network-programming", "asynchronous", "ssh"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thrussh = "0.33.5"
thrussh-keys = "0.21.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
anyhow = "1.0.58"