[package]
name = "t-ssh-client"
version = "0.2.0"
authors = ["kolapapa <kolapapa2021@gmail.com>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/kolapapa/t-ssh-client"
repository = "https://github.com/kolapapa/t-ssh-client"
description = "Rust async ssh client wrapped by thrussh"
keywords = ["tokio", "ssh", "thrussh"]
categories = ["network-programming", "asynchronous"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = ["time", "fs"]}
thrussh = { version = "0.33.5", features = ["openssl"]}
thrussh-keys = { version = "0.21.0", features = ["openssl"]}
thiserror = "1.0.31"

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
